--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
  <title>Home-Page</title>
+ <style>
  body{
  --top-row-height: 70px;
  margin: 0;
@@ -248,6 +249,7 @@ float: left;
  }
 
 }
+ </style>
  <link rel="shortcut icon" href="/images/Brand Icon.png" type="image/x-icon">
  
 </head>
